@@ -1,3 +1,7 @@
+2011-11-07  Marcus Brinkmann  <marcus@g10code.com>
+
+	* src/npth.c (leave_npth): Loop over sem_wait on EINTR.
+
 2011-10-07  Marcus Brinkmann  <marcus@g10code.com>
 
 	* src/npth.h (npth_mutexattr_t, npth_mutexattr_init)
